<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
  <RelativeLayout
      android:id="@+id/relativeLayout"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:background="#ffffffff"
      android:orientation="vertical" >
    
	   <RelativeLayout
	        android:id="@+id/header"
	        android:layout_width="match_parent"
	        android:layout_height="57dp"        
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:background="#36797f" >
	        
	       <TextView 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_centerInParent="true"
	        	android:text="@string/title" 
	        	android:textSize="25sp"
	        	android:typeface="sans"
	        	android:textColor="#ffffff">            
	        </TextView>
	</RelativeLayout>
	
	<LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_alignParentRight="true"
	       android:layout_marginTop="70dp"
	       android:gravity="center_horizontal"
	       android:orientation="vertical" >

	    	<TextView
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/IP"
	               android:textSize="20sp"
	               android:typeface="sans" />
	    
	       <!-- IP -->

	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_alignParentLeft="true"
	           android:layout_alignParentRight="true"
	           android:layout_marginTop="7dp"
	           android:gravity="center_horizontal"
	           android:orientation="horizontal" >
	   
	           <EditText
	               android:id="@+id/editTextIP1"
	               android:layout_width="55dp"
	               android:layout_height="wrap_content"
	               android:ems="10"
	               android:maxLength="3"
	               android:inputType="number" >

	               <requestFocus />
	           </EditText>

	           <TextView
	               android:id="@+id/textView1"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="." />
			
				<EditText
	               android:id="@+id/editTextIP2"
	               android:layout_width="55dp"
	               android:layout_height="wrap_content"
	               android:ems="10"
	               android:maxLength="3"
	               android:inputType="number" >
	           </EditText>
	           	           
				<TextView
	               android:id="@+id/textView2"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="." />
				
				<EditText
	               android:id="@+id/editTextIP3"
	               android:layout_width="55dp"
	               android:layout_height="wrap_content"
	               android:ems="10"
	               android:maxLength="3"
	               android:inputType="number" >
	           </EditText>			

				<TextView
	               android:id="@+id/textView3"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="." />
				
				<EditText
	               android:id="@+id/editTextIP4"
	               android:layout_width="55dp"
	               android:layout_height="wrap_content"
	               android:ems="10"
	               android:maxLength="3"
	               android:inputType="number" >
	           </EditText>		
	           
				<TextView
	               android:id="@+id/textView4"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="/" />
				
				<EditText
	               android:id="@+id/editTextMask"
	               android:layout_width="50dp"
	               android:layout_height="wrap_content"
	               android:ems="10"
	               android:maxLength="2"
	               android:inputType="number" >
	           </EditText>			
					
	   	</LinearLayout>
	   
		<LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_alignParentRight="true"
	       android:layout_marginTop="20dp"
	       android:gravity="center_horizontal"
	       android:orientation="horizontal" >
		
		<Button
		    android:id="@+id/btnCalculate"
		    style="@style/btnStyleShakespeare"
		    android:layout_width="20dp"
		    android:layout_height="match_parent"
		    android:layout_alignParentBottom="true"
		    android:layout_marginTop="20dp"
		    android:layout_weight="0.31"
		    android:clickable="true"
		    android:gravity="center"
		    android:text="@string/calculate" />
		
		<Button
	    	android:id="@+id/btnErase"
	        android:layout_width="20dp"
	        android:layout_height="match_parent"
	        android:layout_alignParentBottom="true"
	        android:layout_marginTop="20dp"
	        android:layout_weight="0.31"
	        android:clickable="true"
	        android:text="@string/erase"
	        android:gravity="center"
	        style="@style/btnStyleShakespeare" />
		
	    </LinearLayout>   
	    
		<RelativeLayout
	        android:id="@+id/rlHosts"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"        
	        android:layout_marginTop="20dp"
	        android:layout_alignParentLeft="true"
	        android:background="#d3d8c2" >
	        
	       <TextView 
	           	android:id="@+id/ViewHosts"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentLeft="true"
	        	android:layout_centerVertical="true"
	        	android:text="@string/hosts" 
	        	android:textSize="16sp"
	        	android:typeface="sans"
	        	android:textColor="#ffffff">            
	        </TextView>
	    </RelativeLayout>
		
		<RelativeLayout
	        android:id="@+id/rlMask"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"        
	        android:layout_marginTop="20dp"
	        android:layout_alignParentLeft="true"
	        android:background="#d3d8c2" >
	        
	       <TextView
	           	android:id="@+id/ViewMask" 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentLeft="true"
	        	android:layout_centerVertical="true"
	        	android:text="@string/mask" 
	        	android:textSize="16sp"
	        	android:typeface="sans"
	        	android:textColor="#ffffff">            
	        </TextView>
	    </RelativeLayout>
		
		<RelativeLayout
	        android:id="@+id/rlNetwork"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"        
	        android:layout_marginTop="20dp"
	        android:layout_alignParentLeft="true"
	        android:background="#d3d8c2" >
	        
	       <TextView
	           	android:id="@+id/ViewNetwork" 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentLeft="true"
	        	android:layout_centerVertical="true"
	        	android:text="@string/network" 
	        	android:textSize="16sp"
	        	android:typeface="sans"
	        	android:textColor="#ffffff">            
	        </TextView>
	    </RelativeLayout>
	    
		<RelativeLayout
	        android:id="@+id/rlBroadcast"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"        
	        android:layout_marginTop="20dp"
	        android:layout_alignParentLeft="true"
	        android:background="#d3d8c2" >
	        
	       <TextView
	           	android:id="@+id/ViewBroadcast" 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentLeft="true"
	        	android:layout_centerVertical="true"
	        	android:text="@string/broadcast" 
	        	android:textSize="16sp"
	        	android:typeface="sans"
	        	android:textColor="#ffffff">            
	        </TextView>
	    </RelativeLayout>
				
		<Button
        android:id="@+id/btnExit"
        style="@style/btnStyleOrange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="17sp"
        android:textAlignment="center"
        android:text="@string/exit" />
		
	</LinearLayout>
  </RelativeLayout>
  
</ScrollView>